actually be something

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>FiredHydra</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+      <div class="sign">
+          <span class="fast-flicker">FiredHydra</span>
+      </div>
+  </body>
 </html>
