--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <div class="sign">
-          <span class="fast-flicker">FiredHydra</span>
+          <span class="fast-flicker noselect">FiredHydra</span>
       </div>
   </body>
 </html>
